<?xml version="1.0"?>
<package format="2">
  <name>super_vio</name>
  <version>0.0.1</version>
  <description>super_vio</description>
  
  <maintainer email="linzeshi@foxmail.com">Lin Zesheng</maintainer>
  
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend> -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>  
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  
</package>
